--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "icheck-bootstrap": "^3.0.1",
+        "overlayscrollbars": "^1.13.1"
     }
 }
