--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "igorescobar/jquery-mask-plugin": "^1.14",
         "jeroennoten/laravel-adminlte": "^3.5",
+        "kennedytedesco/validation": "8.0",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.1"
